--- a/otherService.html
+++ b/otherService.html
@@ -87,7 +87,7 @@
       <div class="service-card animate-card">
         <h3>University degrees & Transcripts</h3>
         <img src="images/university.jpg" alt="Notarization Services">
-        <p>Certification of academic documents for international use, including university degrees, diplomas, and certificates.
+        <p style="font-size: 14px;">Certification of academic documents for international use, including university degrees, diplomas, and certificates.
             <br>We ensure your academic documents are legally recognized across borders, with notary, attestation, and legalization services.</p>        
       </div>
       <!-- Service Card 2 -->
@@ -295,7 +295,7 @@ body { font-family: "Times New Roman", serif; }
   gap: 20px;
 }
 .main-nav a {
-  font-size: 12px; /* reduced */
+  font-size: 10px; /* reduced */
   text-decoration: none;
   color: #333;
   position: relative;
@@ -303,6 +303,7 @@ body { font-family: "Times New Roman", serif; }
 }
 .main-nav a.active { color:#e00000; font-weight:600; }
 .main-nav a.active::after { content:none !important; }
+.main-nav a:hover { color:#e00000; }
 
 /* Mobile nav styles */
 .nav-toggle { display:none; background:none; border:none; font-size:2rem; cursor:pointer; }
