--- a/realEstate.html
+++ b/realEstate.html
@@ -51,12 +51,12 @@
         <div class="red-line"></div>
         <!-- Mobile inline image (hidden on desktop) -->
         <img src="images/investment.webp" alt="International real estate" class="mobile-inline-hero">
-        <p>
+        <p style="font-size: 14px;">
           KCTT Real Estate is the world’s leading agency specializing in premium properties 
           and citizenship by investment programs. We provide comprehensive advisory services 
           for high-net-worth individuals seeking exceptional real estate opportunities.
         </p>
-        <p>
+        <p style="font-size: 14px;">
           From advising you on appropriate residence and citizenship options to sourcing 
           exceptional real estate in the world’s most sought-after locations, our expert 
           team ensures you make informed investment decisions that align with your lifestyle 
@@ -87,7 +87,7 @@
         <div class="red-line"></div>
         <!-- Mobile inline image (hidden on desktop) -->
         <img src="images/consultant.jpg" alt="Consultation support" class="mobile-inline-hero">
-        <p>
+        <p style="font-size: 14px;">
           KCTT assists international clients in obtaining residence and citizenship under the respective programs. Contact us to arrange an initial private consultation.
         </p>        
         <a href="contact.html" class="btn-apply">
@@ -220,7 +220,7 @@ body { font-family: "Times New Roman", serif; }
   gap: 20px;
 }
 .main-nav a {
-  font-size: 12px; /* reduced */
+  font-size: 10px; /* reduced */
   text-decoration: none;
   color: #333;
   position: relative;
@@ -229,7 +229,9 @@ body { font-family: "Times New Roman", serif; }
 .main-nav a.active::after {
   content:none !important;
 }
-.main-nav a.active { color:#e00000; font-weight:600; }
+.main-nav a.active { color:#e00000; font-weight:500; }
+.main-nav a:hover { color:#e00000; }
+
 
 /* Mobile nav styles */
 .nav-toggle { display:none; background:none; border:none; font-size:2rem; cursor:pointer; }
