--- a/Residency Investment/greece.html
+++ b/Residency Investment/greece.html
@@ -558,7 +558,7 @@ body { font-family: "Times New Roman", serif; }
 .main-header {
   background: #fff;
   border-bottom: 1px solid #ddd;
-  position: fixed;   /* fixed to work with top-bar offset script */
+  position: sticky;   /* fixed to work with top-bar offset script */
   top: 0;            
   left: 0;
   right: 0;
@@ -566,7 +566,7 @@ body { font-family: "Times New Roman", serif; }
 }
 
 .header-inner {
-  max-width: 1100px;
+  max-width: 1200px;
   margin: auto;
   display: flex;
   align-items: center;
@@ -581,18 +581,23 @@ body { font-family: "Times New Roman", serif; }
 @media (min-width: 769px) { .main-nav ul { display:flex; } }
 @media (max-width: 768px) { .main-nav ul { display:none; } .main-nav.active ul { display:flex; flex-direction:column; } }
 .main-nav a {
-  font-size: 14px; /* reduced */
-  text-decoration: none;
-  color: #333;
-  position: relative;
+  font-size:10px;
+  text-decoration:none;
+  color:#333;
+  font-family:sans-serif;
+  position:relative;
 }
+
+.main-nav a.active { color:#e00000; font-weight:400; }
+.main-nav a.active::after { content:none !important; }
+.main-nav a:hover { color:#e00000;}
+
 .main-nav a.active::after {
   content: "";
   position: absolute;
   bottom: -4px;
   left: 0; right: 0;
   height: 2px;
-  background: #e8534a;
   margin: auto;
   width: 100%;
 }
