--- a/legalService.html
+++ b/legalService.html
@@ -10,28 +10,29 @@
     <!-- Top Contact Bar -->
   <div class="top-bar">
     <div class="top-bar-inner">
+      <!-- (citizenship.html has empty inner; keep your call link or remove if you want exact emptiness) -->
       <a class="call-link" href="tel:+97455323174">
-        <svg class="phone-icon" viewBox="0 0 24 24" width="18" height="18">
-           </svg>
+        <svg class="phone-icon" viewBox="0 0 24 24" width="18" height="18"></svg>
         <span>Call us at: <strong>+974 5532 3174</strong></span>
       </a>
     </div>
   </div>
 
-  <!-- Header with Logo and Menu -->
+  <!-- Header -->
   <header class="main-header">
     <div class="header-inner">
       <a href="#" class="logo-link">
         <img src="images/logo.jpeg" alt="Company logo" class="logo-img">
       </a>
       <nav class="main-nav">
+        <!-- ...existing nav list... -->
         <ul id="navList">
-          <li><a href="index.html" >Home</a></li>
-          <li><a href="citizenship.html" >Citizenship By Investment</a></li>
-          <li><a href="residencyInvestment.html" >Residency By Investment</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="citizenship.html">Citizenship By Investment</a></li>
+          <li><a href="residencyInvestment.html">Residency By Investment</a></li>
           <li><a href="canadaResidency.html">Canada Permanent Residency</a></li>
           <li><a href="legalService.html" class="active">Legal Services For Canadian Expats</a></li>
-          <li><a href="realEstate.html" >Real Estate Investment Advisory Services</a></li>
+          <li><a href="realEstate.html">Real Estate Investment Advisory Services</a></li>
           <li><a href="otherService.html">Other Services</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
@@ -51,12 +52,12 @@
         <div class="red-line"></div>
         <!-- Mobile inline image (hidden on desktop) -->
         <img src="images/canadian.webp" alt="Expert legal services" class="mobile-inline-hero">
-        <p>
+        <p style="font-size: 14px;">
           KCTT provides comprehensive legal services tailored specifically for Canadian expatriates, 
           ensuring compliance with Canadian and international laws while protecting your interests 
           abroad.
         </p>
-        <p>
+        <p style="font-size: 14px;">
           From tax compliance and immigration matters to real estate law and business structuring, 
           our expert legal team ensures you navigate complex international legal landscapes with 
           confidence and maintain full compliance across all jurisdictions.
@@ -188,7 +189,7 @@
         <div class="red-line"></div>
         <!-- Mobile inline image (hidden on desktop) -->
         <img src="images/whand.jpg" alt="Consultation support" class="mobile-inline-hero">
-        <p>
+        <p style="font-size: 14px;">
           KCTT assists international clients in obtaining residence and citizenship under the respective programs. Contact us to arrange an initial private consultation.
         </p>        
         <a href="contact.html" class="btn-apply">
@@ -278,63 +279,100 @@ body { font-family: "Times New Roman", serif; }
 
 /* Top Contact Bar */
 .top-bar {
-  background: #f5f7f9;
-  padding: 6px 0;
+  background:#f5f7f9;
+  padding:6px 0;
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  z-index:1400;
 }
 .top-bar-inner {
-  max-width: 1100px;
-  margin: auto;
-  text-align: right;
+  max-width:1100px;
+  margin:auto;
+  text-align:right;
 }
 .call-link {
-  text-decoration: none;
-  color: #0b6ea8;
-  font-size: 14px;
-  display: inline-flex;
-  align-items: center;
-  gap: 6px;
+  text-decoration:none;
+  color:#0b6ea8;
+  font-size:14px;
+  display:inline-flex;
+  align-items:center;
+  gap:6px;
 }
-.phone-icon { color: #0b6ea8; }
+.phone-icon { color:#0b6ea8; }
 
 
 /* Header */
 .main-header {
-  background: #fff;
-  border-bottom: 1px solid #ddd;
-  position: sticky;   
-  top: 0;            
-  z-index: 1000;     
+  background:#fff;
+  border-bottom:1px solid #ddd;
+  position:fixed;
+  top:0; /* will be adjusted by JS */
+  left:0;
+  width:100%;
+  z-index:1300;
+  transition:box-shadow .25s ease, background .25s ease;
 }
-
+.main-header.scrolled {
+  box-shadow:0 4px 12px -2px rgba(0,0,0,0.12);
+}
 .header-inner {
-  max-width: 1100px;
-  margin: auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 10px;
+  max-width:1100px;
+  margin:auto;
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  padding:10px 10px 10px 0;
 }
-.logo-img { height: 50px; }
-.main-nav ul {
-  list-style: none;
-  display: flex;
-  gap: 20px;
-}
-.main-nav a {
-  font-size: 12px; /* reduced */
-  text-decoration: none;
-  color: #333;
-  position: relative;
-  font-family: sans-serif;
-}
-.main-nav a.active { color:#e00000; font-weight:600; }
-.main-nav a.active::after { content:none !important; }
+.logo-img { height:50px; }
 
-/* Mobile nav styles */
+.main-nav ul { list-style:none; display:flex; gap:20px; }
+.main-nav a {
+  font-size:10px;
+  text-decoration:none;
+  color:#333;
+  font-family:sans-serif;
+  position:relative;
+}
+.main-nav a.active { color:#e00000; font-weight:400; }
+.main-nav a.active::after { content:none !important; }
+.main-nav a:hover { color:#e00000;}
+
+.main-nav ul {
+  gap:19px;              
+}
+
+
+@media (max-width:768px){
+  /* Mobile keeps column layout; no horizontal gap needed */
+  .main-nav ul { gap:20px; }
+}
+
+/* Desktop spacing tweak (optional; keep if needed) */
+@media (min-width:901px){
+  .header-inner { gap:40px; }
+}
+
+/* Mobile nav stays as you had */
 .nav-toggle { display:none; background:none; border:none; font-size:2rem; cursor:pointer; }
 @media (max-width:768px){
   .nav-toggle { display:block; color:#222; }
-  .main-nav ul{ display:none; flex-direction:column; background:#fff; position:absolute; top:60px; right:10px; width:78%; max-width:320px; border:1px solid #e5e7eb; border-radius:10px; box-shadow:0 10px 28px -4px rgba(0,0,0,0.18),0 4px 12px -2px rgba(0,0,0,0.08); padding:8px 0; z-index:999; }
+  .main-nav ul{
+    display:none;
+    flex-direction:column;
+    background:#fff;
+    position:absolute;
+    top:60px;
+    right:10px;
+    width:78%;
+    max-width:320px;
+    border:1px solid #e5e7eb;
+    border-radius:10px;
+    box-shadow:0 10px 28px -4px rgba(0,0,0,0.18),0 4px 12px -2px rgba(0,0,0,0.08);
+    padding:8px 0;
+    z-index:1500;
+  }
   .main-nav.active ul{ display:flex; }
   .main-nav ul li{ width:100%; padding:10px 18px; }
   .main-nav ul li + li{ border-top:1px solid #f1f2f4; }
@@ -764,4 +802,26 @@ document.addEventListener('DOMContentLoaded', function(){
   animateSections.forEach(section => sectionObserver.observe(section));
   serviceCards.forEach(card => cardObserver.observe(card));
 });
+</script>
+
+<!-- Add header offset + scroll shadow (match citizenship.html) -->
+<script>
+(function(){
+  function adjustHeaderOffset(){
+    const topBar = document.querySelector('.top-bar');
+    const header = document.querySelector('.main-header');
+    if(!topBar || !header) return;
+    header.style.top = topBar.offsetHeight + 'px';
+    document.body.style.paddingTop = (topBar.offsetHeight + header.offsetHeight) + 'px';
+  }
+  window.addEventListener('load', adjustHeaderOffset);
+  window.addEventListener('resize', adjustHeaderOffset);
+  window.addEventListener('orientationchange', adjustHeaderOffset);
+  window.addEventListener('scroll', ()=>{
+    const header = document.querySelector('.main-header');
+    if(!header) return;
+    if(window.scrollY > 10) header.classList.add('scrolled');
+    else header.classList.remove('scrolled');
+  });
+})();
 </script>
